--- a/css/style.css
+++ b/css/style.css
@@ -422,12 +422,13 @@ input[type="number"] {
 .feedback{
 	background-color: #c5b3d8;
 	position: relative;
+	padding: 80px 0;
 }
 .feedback p{
 	font-size: 14px;
 	line-height: 1.2em;
 	font-style: italic;
-	color: #ffffff;
+	color: #fff;
 }
 .carousel-inner{
 	position: relative;
@@ -440,23 +441,47 @@ input[type="number"] {
 	border: 14px solid #ffffff;
 	opacity: 0.12;
 	top: 15%;
-	left: 50%;
+	left: 60%;
 	transform: translate(-50%);
 }
-.carousel-control-prev, .carousel-control-next{
+.feedback-prev{
+	left: 40%;
+	top: 110%;
+}
+.feedback-next{
+	right: 40%;
+	top: 110%;
+}
+.carousel-item p{
+	font-size: 14px;
+	line-height: 1.2em;
+	color: #707070;
+}
+.about-us{
+	padding: 80px 0;
+}
+.about-us-title::before{
+	content: url("../image/about-us/lotos.png");
 	position: absolute;
-	bottom: -100%;
+	bottom: 10%;
+	left: 50%;
+	transform: translate(-50%);
+	opacity: 0.5;
+	z-index: -1;
 }
-.carousel-control-prev{
-	left: 35%;
+.about-us-prev{
+	left: 15%;
 }
-.carousel-control-next{
-	right: 35%;
+.about-us-next{
+	right: 15%;
 }
-
-
-
-
+@media (min-width:768px) {
+	.feedback-slider{
+		width: 40%;
+	}
+	.about-us-slider{
+		width: 50%;}
+}
 
 
 
