--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ img{
 .navbar-light{
 	background-color: #f5f2f8;
 }
+.navbar-toggler{
+	border: none;
+	color: #5b5da8  !important;
+}
+.navbar-toggler:focus{
+	border: 1px solid #5b5da8;
+	box-shadow: none;
+}
 main{
 	flex: 1 1 auto;
 }
