--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ ul{
 main{
 	flex: 1 1 auto;
 }
+.logo-mobile{
+	margin: 70px 0 0;
+	padding: 30px 0;
+}
 nav{
 	background-color: #f5f2f8;
 }
@@ -173,30 +177,26 @@ main{
 	overflow: hidden;
 }
 .banner{
-	margin: 0;
-	padding: 0;
+	padding: 125px 0;
 	background-image: url("../image/banner/banner_main.jpg");
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 80vh;
 	width: 100vw;
 	overflow: hidden;
-}
-.banner-content{
-	padding: 140px 0 0;
 	position: relative;
 }
-.banner-content::after{
+.banner::after{
 	content: " ";
 	position: absolute;
 	background-color: #b992d9;
 	opacity: 0.5;
-	height: 100vh;
-	width: 550px;
-	border-radius: 45%;
-	top: -10%;
-	left: 80%;
+	height: 100%;
+	width: 350px;
+	top: 0;
+	right: 0;
+	border-top-left-radius:  20% 55% ;
+	border-bottom-left-radius: 20% 55%;
 }
 h1{
 	display: inline-block;
