--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@ img{
 svg{
 	color: #5b5da8;
 }
+.social-icon-phone svg{
+	color: #ff5fb6;
+}
 .navbar-toggler:focus{
 	box-shadow: 2px 1px 5px #5b5da8;
 }
@@ -54,6 +57,10 @@ main{
 .logo-mobile{
 	margin: 70px 0 0;
 	padding: 30px 0;
+}
+.mobile-search{
+	width: 70%;
+	margin: 0 auto;
 }
 nav{
 	background-color: #f5f2f8;
@@ -556,6 +563,9 @@ h5 span::after{
 	top: 110%;
 	left: 0%;
 }
+.contacts{
+	padding: 0;
+}
 .contacts li{
 	padding-left: 50px ;
 	position: relative;
@@ -581,6 +591,9 @@ h5 span::after{
 .phone-numbers{
 	margin-top: 25px;
 }
+.phone-numbers a{
+	display: block;
+}
 .phone-numbers::before{
 	content: url('../image/contacts/smartphone.png');
 	position: absolute;
@@ -597,6 +610,28 @@ h5 span::after{
 	left: 0;
 	top: 0;
 }
+.social{
+	position: relative;
+}
+.instagram:hover::after{
+	content: url('../image/social-icons/instagram-pink.png');
+	position: absolute;
+   top: 0;
+	left: 0;
+}
+.facebook:hover::after{
+	content: url('../image/social-icons/facebook-pink.png');
+	position: absolute;
+   top: 0;
+	left: 0;
+}
+.google:hover::after{
+	content: url('../image/social-icons/google-pink.png');
+	position: absolute;
+   top: 0;
+	left: 0;
+}
+
 @media (min-width:768px) {
 	.feedback-slider{
 		width: 40%;
